--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+
+    /* color */
+    --darkred: #e27d60;
+    --lightblue: #85CDCB;
+    --lightread: #E8A87C;
+    --purple: #C38D9D;
+    --blue: #40B3A2;
+
+    /* space */
+    --small-margin: 6px;
+    --medium-margin: 18px;
+    --large-margin: 30px;
+
+    /* padding */
+
+    --small-padding: 6px;
+    --medium-padding: 12px;
+    --large-padding: 18px;
+
+}
+*{
+    margin:0;
+    padding:0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+    background-color: var(--lightblue);
+}
+.title{
+    margin-left: 140px;
+}
+.sidebar{
+    display:flex;
+    flex-direction: column;
+    background: var(--darkred);
+    width: 130px;
+    position: fixed;
+    top: var(--medium-margin);
+    left: var(--small-margin);
+}
+
+.sidebar li{
+    padding : var(--medium-padding) var(--large-padding);
+
+}
+
+.main{
+    margin-left:  140px;
+    background-color:  var(--blue);
 }
